--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "husky": "^9.0.11",
     "i18n-js": "^4.4.3",
     "i18next": "^23.8.2",
-    "jest": "^29.3.1",
-    "jest-expo": "~51.0.1",
     "lint-staged": "^15.2.5",
     "qs": "^6.12.1",
     "react": "18.2.0",
@@ -56,7 +54,8 @@
     "@babel/eslint-parser": "^7.24.1",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
-    "@testing-library/react-native": "^12.5.0",
+    "@testing-library/react-native": "^12.7.2",
+    "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.57.0",
@@ -67,6 +66,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.4",
     "prettier": "^3.2.5"
   },
   "private": true,
